--- a/AmiiboGameList/AmiiboGameList.csproj
+++ b/AmiiboGameList/AmiiboGameList.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>1.1.0</Version>
+    <Company />
+    <Authors>MrKev312</Authors>
   </PropertyGroup>
 
   <ItemGroup>
