--- a/AmiiboGameList/AmiiboGameList.csproj
+++ b/AmiiboGameList/AmiiboGameList.csproj
@@ -6,12 +6,12 @@
     <Version>1.4.0</Version>
     <Company />
     <Authors>MrKev312</Authors>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Costura.Fody" Version="4.1.0" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
