Remove update argument

--- a/AmiiboGameList/Properties/launchSettings.json
+++ b/AmiiboGameList/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AmiiboGameList": {
       "commandName": "Project",
-      "commandLineArgs": "-u -log 0"
+      "commandLineArgs": "-log 0"
     }
   }
 }
