--- a/AmiiboGameList/AmiiboGameList.csproj
+++ b/AmiiboGameList/AmiiboGameList.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<Version>1.4.0</Version>
 		<Authors>MrKev312</Authors>
 		<NeutralLanguage>en</NeutralLanguage>
@@ -13,10 +13,11 @@
 
 	<PropertyGroup>
 		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
 
